优化event PATCH 优化swagger.yaml
